--- a/main.html
+++ b/main.html
@@ -69,16 +69,16 @@
     <!--スライドショー-->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_6361.jpg" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6361.jpg?raw=true" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_6525.JPG" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6525.JPG?raw=true" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_3658.jpg" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3658.jpg?raw=true" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_3455.jpg" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3455.jpg?raw=true" style="width:100%">
         </div>
             <!-- ドットコンテナ -->
         <div class="dot-container" style="text-align:center">
