--- a/main.html
+++ b/main.html
@@ -12,10 +12,6 @@
 <body>
     <!--ヘッダー-->
     <header>
-        <!--メニューアイコン-->
-        <div class="menu-icon" id="menu-icon">
-            <ion-icon name="menu-outline"></ion-icon>
-        </div>
         <!--タイトル-->
         <h1 class="title">Day by Day blog</h1>
         <!--リンク-->
@@ -25,10 +21,9 @@
             </a>
             <a href="https://x.com/_ai_security" target="_blank" class="header-icon">
                 <img src="https://img.icons8.com/ios/50/twitterx--v2.png" alt="X icon" class="x-icon hover-effect">
-            </a>                     
+            </a>                      
         </div>
     </header>
-    
     <!--ナビゲーションボタン-->
     <nav class="nav-buttons">
         <a href="main.html" class="nav-button"><strong>Home</strong></a>
@@ -36,49 +31,22 @@
         <a href="blog.html" class="nav-button"><strong>Blog</strong></a>
         <a href="tweet.html" class="nav-button"><strong>Tweet</strong></a>
     </nav>
-
-    <!--サイドバー-->
-    <div class="sidebar" id="sidebar">
-        <!--サイドバータイトル-->
-        <div class="sidebar-header">
-            <span class="sidebar-title"><strong>Day by Day blog</strong></span>
-            <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
-        </div>      
-        <!--サイドバーメニュー-->  
-        <div class="sidebar-links">
-            <div class="sidebar-heading">Home</div>
-            <a href="main.html" class="sidebar-link"><ion-icon name="home-outline"></ion-icon><strong>Home</strong></a>
-            <div class="sidebar-heading">About</div>
-            <a href="about.html" class="sidebar-link"><ion-icon name="information-circle-outline"></ion-icon><strong>About</strong></a>
-            <div class="sidebar-heading">Blog</div>
-            <a href="blog.html" class="sidebar-link"><ion-icon name="create-outline"></ion-icon><strong>Blog</strong></a>
-            <div class="sidebar-heading">Tweet</div>
-            <a href="tweet.html" class="sidebar-link"><ion-icon name="chatbubbles-outline"></ion-icon><strong>Tweet</strong></a>
-        </div>
-        <!--お問い合わせなど-->
-        <div class="add">
-            <a href="main.html" class="inquery" id="inquery"><strong>Inquery</strong></a>
-            <a href="main.html" class="inquery" id="qanda"><strong>Q&A</strong></a>
-            <a href="main.html" class="inquery" id="map"><strong>Map</strong></a>
-        </div>
-    </div>
-    
     <!--開いた時の色変化-->
     <div class="overlay" id="overlay"></div>
 
     <!--スライドショー-->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6361.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_6361.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6525.JPG?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_6525.JPG" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3658.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_3658.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3455.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_3455.jpg" style="width:100%">
         </div>
             <!-- ドットコンテナ -->
         <div class="dot-container" style="text-align:center">
