--- a/main.html
+++ b/main.html
@@ -19,9 +19,10 @@
             <a href="https://github.com/nicomputer-GitHub" target="_blank" class="header-icon">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="https://x.com/_ai_security" target="_blank" class="header-icon">
-                <img src="https://img.icons8.com/ios/50/twitterx--v2.png" alt="X icon" class="x-icon hover-effect">
-            </a>                      
+            <a href="https://x.com/_AI_Security" class="header-icon x-icon">
+                <img src="C:\Users\tanug\AppData\Local\Temp\a3f1f383-c2c4-4ea1-b664-0b27cce9f4f7_x-logo (1).zip.4f7\logo-white.png" alt="X Icon">
+            </a>            
+
         </div>
     </header>
     <!--ナビゲーションボタン-->
@@ -29,7 +30,7 @@
         <a href="main.html" class="nav-button"><strong>Home</strong></a>
         <a href="about.html" class="nav-button"><strong>About</strong></a>
         <a href="blog.html" class="nav-button"><strong>Blog</strong></a>
-        <a href="tweet.html" class="nav-button"><strong>Tweet</strong></a>
+        <a href="tweet.html" class="nav-button"><strong></strong></a>
     </nav>
     <!--開いた時の色変化-->
     <div class="overlay" id="overlay"></div>
@@ -85,6 +86,8 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    
 </body>
 
 </html>
