--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
             <img src="C:\Users\tanug\Downloads\IMG_3658.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_3455.jpg" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3455.jpg?raw=true" style="width:100%">
         </div>
             <!-- ドットコンテナ -->
         <div class="dot-container" style="text-align:center">
