--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
     <!--スライドショー-->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="C:\Users\tanug\Downloads\IMG_6361.jpg" style="width:100%">
+            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6525.JPG?raw=true" style="width:100%">
         </div>
         <div class="mySlides fade">
             <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6361.jpg?raw=true" style="width:100%">
