--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
                 <ion-icon name="logo-github"></ion-icon>
             </a>
             <a href="https://x.com/_AI_Security" class="header-icon x-icon">
-                <img src="C:\Users\tanug\AppData\Local\Temp\a3f1f383-c2c4-4ea1-b664-0b27cce9f4f7_x-logo (1).zip.4f7\logo-white.png" alt="X Icon">
+                <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/logo-white.ipg.jpg?raw=true" alt="X Icon">
             </a>            
 
         </div>
