--- a/main.html
+++ b/main.html
@@ -19,10 +19,9 @@
             <a href="https://github.com/nicomputer-GitHub" target="_blank" class="header-icon">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="https://x.com/_AI_Security" class="header-icon x-icon">
-                <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/logo-white.ipg.jpg?raw=true" alt="X Icon">
-            </a>            
-
+            <a href="https://twitter.com/yourprofile" target="_blank" class="header-icon-X">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
         </div>
     </header>
     <!--ナビゲーションボタン-->
@@ -38,16 +37,16 @@
     <!--スライドショー-->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6525.JPG?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_6361.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_6361.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_6525.JPG" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3658.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_3658.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
-            <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/IMG_3455.jpg?raw=true" style="width:100%">
+            <img src="C:\Users\tanug\Downloads\IMG_3455.jpg" style="width:100%">
         </div>
             <!-- ドットコンテナ -->
         <div class="dot-container" style="text-align:center">
@@ -85,9 +84,7 @@
     <script src="scripts.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    
+    <script src="https://kit.fontawesome.com/09db34d260.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
