--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
         <p>This is the nicomputer's website. I write it with the feeling that I want to try my best every day, even if it's just a little bit at a time. If you would like to see it, please click the button below.</p>
         
-        <a href="choose.html" class="custom-button">Next Page →</a>
+        <a href="home.html" class="custom-button">Next Page →</a>
 
         <footer>nicomputer</footer>
     </div>
