--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HP</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style_hp.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
@@ -31,13 +31,13 @@
             <a href="home.html" class="menu-item">
                 <i class="fa fa-home"></i> Home
             </a>
-            <a href="blog_hp.html" class="menu-item">
+            <a href="blog.html" class="menu-item">
                 <i class="fa fa-blog"></i> Blog
             </a>
-            <a href="album_hp.html" class="menu-item">
+            <a href="album.html" class="menu-item">
                 <i class="fa-regular fa-image"></i> Album
             </a>
-            <a href="portfolio_hp.html" class="menu-item">
+            <a href="portfolio.html" class="menu-item">
                 <i class="fa-solid fa-pen-nib"></i> Portfolio
             </a>
             <a href="about.html" class="menu-item">
@@ -60,15 +60,15 @@
                 <p class="icon-label">Home</p>
             </div>
             <div class="icon blog-icon">
-                <a href="blog_hp.html"><i class="fa fa-blog"></i></a>
+                <a href="blog.html"><i class="fa fa-blog"></i></a>
                 <p class="icon-label">Blog</p>
             </div>
             <div class="icon album-icon">
-                <a href="album_hp.html"><i class="fa-regular fa-image"></i></a>
+                <a href="album.html"><i class="fa-regular fa-image"></i></a>
                 <p class="icon-label">Album</p>
             </div>
             <div class="icon portfolio-icon">
-                <a href="portfolio_hp.html"><i class="fa-solid fa-pen-nib"></i></a>
+                <a href="portfolio.html"><i class="fa-solid fa-pen-nib"></i></a>
                 <p class="icon-label">Portfolio</p>
             </div>
             <div class="icon about-icon">
@@ -85,6 +85,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
     <script src="https://kit.fontawesome.com/09db34d260.js" crossorigin="anonymous"></script>
-    <script src="script_hp.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
