--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HP</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style_hp.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
@@ -36,6 +36,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/09db34d260.js" crossorigin="anonymous"></script>
-    <script src="script_hp.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
