--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
             <li>Movie Viewing</li>
             <li>Drawing</li>
         </ul><hr>
-        <h2># Places I have traveled to</h2>
+        <h2># Trip</h2>
         <ul class="name pastime-list">
             <li>America</li>
         </ul><hr>
