--- a/about.html
+++ b/about.html
@@ -20,24 +20,23 @@
                 <i class="fa-brands fa-x-twitter" id="x-icon"></i>
             </a>
         </div>
-
         <!-- back -->
         <div id="back-button">
             <i class="fa fa-arrow-left"></i>
         </div>
-
         <!-- top -->
         <div id="scroll-top-button" class="scroll-top-button">
             <i class="fa-solid fa-chevron-up"></i>
         </div>
 
-        <!-- menu button -->
         <div id="menu-button">
             <i class="fa fa-bars"></i>
         </div>
 
-        <!--menu -->
         <div id="menu">
+            <a href="main_hp.html" class="menu-item">
+                <i class="fa-solid fa-earth-asia"></i> Top
+            </a>
             <a href="home.html" class="menu-item">
                 <i class="fa fa-home"></i> Home
             </a>
@@ -45,18 +44,17 @@
                 <i class="fa fa-blog"></i> Blog
             </a>
             <a href="album.html" class="menu-item">
-                <i class="fa fa-images"></i> Album
+                <i class="fa-regular fa-image"></i> Album
             </a>
             <a href="portfolio.html" class="menu-item">
-                <i class="fa fa-briefcase"></i> Portfolio
+                <i class="fa-solid fa-pen-nib"></i> Portfolio
             </a>
             <a href="about.html" class="menu-item">
-                <i class="fa fa-info-circle"></i> About
+                <i class="fa-solid fa-paw"></i> About
             </a>
             <br>
             <br>
         </div>
-
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
         <h1>Self Introduction</h1>
@@ -86,12 +84,14 @@
             <li><strong>Japan</strong><br>Hokkaido / Miyagi / Kanagawa / Chiba / Tokyo / Nara / Kyoto / Osaka / Fukuoka / Nagasaki / Okinawa</li><br>
             <li><strong>America</strong><br>Los Angeles / Washington / New York / Guam</li><br>
 
-            If you would like to see photos, please click <strong><a href="album.html" class="special-link">"here".</strong>
+            If you would like to see photos, please click <strong><a href="album.html" class="special-link">"here"</a></strong>.
         </ul><hr>
+
+        <h2 class="colored-line it-line">IT Certification</h2>
+        <span class="name">IT / SG / FE</span><hr>
 
         <div class="scrolldown3"><span>Scroll</span></div>
     </div>
-    
     
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
