--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </div>
 
         <div id="menu">
-            <a href="main_hp.html" class="menu-item">
+            <a href="main.html" class="menu-item">
                 <i class="fa-solid fa-earth-asia"></i> Top
             </a>
             <a href="home.html" class="menu-item">
