--- a/home.html
+++ b/home.html
@@ -28,6 +28,9 @@
         </div>
 
         <div id="menu">
+            <a href="main.html" class="menu-item">
+                <i class="fa-solid fa-earth-asia"></i> Top
+            </a>
             <a href="home.html" class="menu-item">
                 <i class="fa fa-home"></i> Home
             </a>
