--- a/main.html
+++ b/main.html
@@ -10,7 +10,6 @@
 
 <body>
     <div id="particles-js"></div>
-    
     <div id="wrapper">
         <div id="search-wrap">
             <a href="https://github.com/nicomputer-GitHub" target="blank" class="header-icon">
@@ -20,13 +19,13 @@
                 <i class="fa-brands fa-x-twitter" id="x-icon"></i>
             </a>
         </div>
-
+        <!-- title -->
         <div id="title">
             <h3>Welcome</h3>
         </div>
-
+        <!-- p -->
         <p>This is the nicomputer's website. I write it with the feeling that I want to try my best every day, even if it's just a little bit at a time. If you would like to see it, please click the button below.</p>
-        
+        <!-- custom button -->
         <div class="custom-button-container">
             <a href="home.html" class="custom-button">Next Page →</a>
         </div>
