--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <i class="fa fa-bars"></i>
         </div>
         <div id="menu">
-            <a href="main.html" class="menu-item">
+            <a href="main_hp.html" class="menu-item">
                 <i class="fa-solid fa-earth-asia"></i> Top
             </a>
             <a href="home.html" class="menu-item">
@@ -53,6 +53,30 @@
             </a>
             <br>
             <br>
+        </div>
+        <!-- h1 -->
+        <h1>Blog</h1>
+        <p>Hi, there👋 Here, I will write down my plant observations, my daily learning, and any other thoughts that come to mind. However, please note that this is a matter of personal opinion.</p><hr>
+        <p>The topics are divided into categories, so please click on the topic you would like to see.</p>
+        <!-- Gallery Section -->
+        <div class="gallery-container">
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-category="all"><strong>All</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Plant</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Learning</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Running</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Event</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Trip</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Drawing</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>University</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Food</strong></button>
+                <button class="filter-btn" data-category="category0"><strong>Tweet</strong></button>
+            </div>
+            <div class="gallery">
+                <div class="gallery-item" data-category="category2"><img src="" alt="Image 2"></div>
+
+                <div class="gallery-item" data-category="category1"><img src="path_to_image4.jpg" alt="Image 4"></div>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <div class="scrolldown3"><span>Scroll</span></div>
