--- a/album.html
+++ b/album.html
@@ -54,8 +54,9 @@
             <br>
             <br>
         </div>
-        <h1>Photo Album</h1>
-        <p>Hi, there👋 I have collected some photos of various cities, so please take a look if you are interested.</p><hr>
+        <!-- h1 -->
+        <h1>Album</h1>
+        <p>Hi, there👋 Here, I will introduce some of my paintings. I am self-taught, so there are many parts that are not very good, but I draw places that I have been to.</p><hr>
         <p>The cities are divided into categories, so please click on the city name you would like to see.</p>
         <!-- Gallery Section -->
         <div class="gallery-container">
@@ -79,14 +80,7 @@
                 <button class="filter-btn" data-category="category14">New York</button>
             </div>
             <div class="gallery">
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5170.HEIC" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5178.JPG" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5183.HEIC" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5207.HEIC" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5211.HEIC" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5207.jpg" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5170.HEIC" alt="Image 2"></div>
-                <div class="gallery-item" data-category="category2"><img src="C:\Users\tanug\Downloads\IMG_5170.HEIC" alt="Image 2"></div>
+                <div class="gallery-item" data-category="category2"><img src="" alt="Image 2"></div>
 
                 <div class="gallery-item" data-category="category1"><img src="path_to_image4.jpg" alt="Image 4"></div>
             </div>
