--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <i class="fa fa-bars"></i>
         </div>
         <div id="menu">
-            <a href="main_hp.html" class="menu-item">
+            <a href="main.html" class="menu-item">
                 <i class="fa-solid fa-earth-asia"></i> Top
             </a>
             <a href="home.html" class="menu-item">
