--- a/php_1.html
+++ b/php_1.html
@@ -80,7 +80,7 @@
         </ul><hr>
 
         <h2 id="composer" class="colored-line birthplace-line">Installing Composer (windows ver.)</h2>
-        <img src="C:\Users\tanug\OneDrive\Pictures\Screenshots\スクリーンショット 2024-08-05 203959.png" class="small-image"><br>
+        <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/Composer.png?raw=true" class="small-image"><br>
         <ul class="name pastime-list">
             <li>Download 'Composer' and open the executable.</li>
             <li>Just press the 'NEXT' button. I will read the article just in case.</li>
