--- a/php_1.html
+++ b/php_1.html
@@ -73,7 +73,7 @@
         </nav>
         <hr>
         <h2 id="xampp" class="colored-line name-line">Installing Xampp (windows ver.)</h2>
-        <img src="C:\Users\tanug\OneDrive\Pictures\Screenshots\スクリーンショット 2024-08-05 203134.png" class="small-image"><br>
+        <img src="https://github.com/nicomputer-GitHub/nicomputer-Contents/blob/main/Xampp.png?raw=true" class="small-image"><br>
         <ul class="name pastime-list">
             <li>Download 'Xampp' and open the executable.</li>
             <li>Just press the 'NEXT' button. I will read the article just in case.</li>
