--- a/learning.html
+++ b/learning.html
@@ -114,6 +114,24 @@
                     <h2>PHP</h2>
                 </div>
             </a>
+            <a href="sql_projects.html" class="project-button">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original.svg" />
+                <div class="project-text">
+                    <h2>MySQL</h2>
+                </div>
+            </a>
+            <a href="seccamp.html" class="project-button">
+                <i class="fa-solid fa-campground"></i>
+                <div class="project-text">
+                    <h2>Seccamp2024</h2>
+                </div>
+            </a>
+            <a href="link.html" class="project-button">
+                <i class="fa-solid fa-link"></i>
+                <div class="project-text">
+                    <h2>Link</h2>
+                </div>
+            </a>
             <a href="ubuntu_projects.html" class="project-button">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ubuntu/ubuntu-original.svg" />
@@ -129,12 +147,7 @@
                     <h2>HTML・CSS・Javescript</h2>
                 </div>
             </a>
-            <a href="link.html" class="project-button">
-                <i class="fa fa-link"></i>
-                <div class="project-text">
-                    <h2>Link</h2>
-                </div>
-            </a>
+            
         </div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
